# AgentWeave

./: .gitattributes  .gitignore  =26.0  AGENTS.md  CHANGELOG.md  CLAUDE.md  HANDOFF.md  Makefile  README.md  ROADMAP.md  agentweave.template.yml  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  hub-image.yml  publish.yml
.interagent/: AGENTS.md  README.md
docs/: adding-new-agents.md  index.md  kimi-task-hub-mcp-minimax-glm.md
docs/architecture/: locking.md  messaging.md  overview.md  transport-layer.md  watchdog.md
docs/audit-2026-q2/: HANDOFF.md  README.md  findings.md  pr-roadmap.md  pr1-spa-key-leak.md
docs/contributing/: development.md  release-process.md
docs/getting-started/: alternative-modes.md  configuration.md  installation.md  migration.md  quickstart.md
docs/guides/: adding-new-agents.md  ai-jobs.md  aw-spec-workflow.md  claude-proxy-agents.md  context-files.md  cross-machine-collab.md  dashboard.md  faq.md  logging-guide.md  opencode-agents.md  opencode-models.md  pilot-mode.md  session-modes.md
docs/reference/: agentweave-yml.md  cli-commands.md  env-variables.md  hub-api.md  mcp-tools.md  task-lifecycle.md
examples/: basic_workflow.py  parallel_workflow.py
hub/: .env.example  Dockerfile  Dockerfile.dev  Makefile  docker-compose.build.yml  docker-compose.yml  pyproject.toml  setup.sh
hub/hub/: auth.py  config.py  main.py  mcp_server.py  scheduler.py  sse.py  utils.py
hub/tests/: conftest.py  test_agent_chat.py  test_agents.py  test_agents_self_registered.py  test_auth.py  test_bola.py  test_instructions.py  test_jobs.py  test_jobs_crud.py  test_mcp_server.py  test_messages.py  test_migrations.py  test_pilot_mode.py  test_questions.py  test_runtime_diagnostics.py  test_setup.py  test_spec.py  test_sse.py  test_tasks.py
hub/ui/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts  vitest.config.ts
specs/: agentweave-spec.html
tests/: test_activate.py  test_cli.py  test_cli_pilot.py  test_cli_watch.py  test_config.py  test_constants.py  test_context_builder.py  test_diagnostics.py  test_eventlog.py  test_http_transport.py  test_hub_commands.py  test_init.py  test_jobs.py  test_locking.py  test_logging_handlers.py  test_mcp_server.py  test_messaging.py  test_opencode_cli_override.py  test_roles.py  test_runner.py  test_session.py  test_skill_templates.py  test_task.py  test_transport_git.py  test_transport_local.py  test_utils.py  test_validator.py  test_watchdog.py  test_watchdog_pilot.py  test_watchdog_self_registered.py  test_watchdog_session.py
(+265 files in other folders)
